fix: logo was visible over the date picker

--- a/src/app/components/ui/logo/logo.component.scss
+++ b/src/app/components/ui/logo/logo.component.scss
@@ -2,6 +2,7 @@
 
 .logo {
   position: relative;
+  z-index: -1;
 
   width: auto;
   height: 100%;
